--- a/lec_07.tex
+++ b/lec_07.tex
@@ -1,4 +1,6 @@
 %%% Divisibilidad
+\titleformat{\section}{\normalfont\Large\bfseries\sffamily}{\thesection}{10pt}{\Large}
+\titlespacing*{\section}{0pt}{20pt}{15pt}
 \newpage
 \appendix
 \section{Divisibilidad}
