--- a/main.tex
+++ b/main.tex
@@ -43,7 +43,7 @@
 \begin{center}
     \begin{minipage}{0.7\textwidth}
         \centering
-        {\Large\textsc{Propuesta de Tesis}} \\
+        {\Large\textsc{Tesis}} \\
         {\normalsize\textsc{Que para obtener el título de}} \\
         {\normalsize\textsc{Licenciado en Física y Matemáticas}}
         \medskip
@@ -76,7 +76,7 @@
 
 \begin{center}
     \begin{minipage}{0.8\textwidth}
-        {\normalsize\textsc{Cuidad de México} \hfill {\small Marzo de 2025}}
+        {\normalsize\textsc{Cuidad de México} \hfill {\small Mayo de 2025}}
     \end{minipage}
 \end{center}
 
@@ -109,6 +109,10 @@ Debo agradecer a mis padres, quienes en su infinita paciencia vieron como se ges
 Debo darle las gracias también a mi asesor, el Dr. Pablo Lam, por su atención incondicional durante toda la realización de este trabajo y su firme convicción en que se podría terminar de forma satisfactoria, sin mencionar la gran ayuda y orientación sobre todos los detalles técnicos y burocráticos necesarios para iniciar y terminar esta tesis. No está de más agradecer también a la Dra. Myriam Maldonado, al Dr. César Escobar, al M. en C. Andrés Sabino y al Dr. David Fernández por tomarse la molestia de leer este trabajo y ayudarme a mejorarlo. A fin de cuentas, un trabajo es incompleto si no incluye enfoques, observaciones y puntos de vista diferentes al de uno. Cualquier error que se encuentre en este trabajo recae únicamente sobre mi.
 
 Finalmente, siento una inmensa gratitud a la ESFM, o lo que es lo mismo, a todos los docentes que me formaron como matemático en este centro de estudios. De principio a fin me sentí fascinado por todo lo que se nos presentaba en el aula, y no hubo profesor del que no aprendiera algo maravilloso. Los temas que elegí para discutir aquí están en gran parte influenciados por mis más tiernos inicios al entrar a esta escuela, particularmente por la unidad de aprendizaje de álgebra I, a cuyos contenidos volví para desarrollar gran parte de la tesis. En mi opinión, esto prueba que la formación que esta escuela ofrece es de carácter universal y fundamental, abriéndole las puertas a todos sus alumnos para profundizar en cualquier rama de las matemáticas que deseen.}
+
+\includepdf[pages=-]{cesion.pdf}
+
+\includepdf[pages=-]{aut.pdf}
 
 \newpage
 \thispagestyle{empty}
